Arreglos en la página de contacto, finalizado navbar izquierdo

--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -1,6 +1,12 @@
 body {
   background-color: #f0f0f0;
-  height: 150vh;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: 230px 100px;
+  grid-gap: 30px;
+  background-color: #fff;
 }
 
 .large {
