--- a/src/app/balance/balance.component.html
+++ b/src/app/balance/balance.component.html
@@ -11,7 +11,7 @@
   <div class="card_button">
     <button
       class="b_color buttons"
-      routerLink="/operations/action"
+      routerLink="/deposit"
       routerLinkActive="active"
     >
       Ingresar dinero
