--- a/src/app/facturas/facturas.component.html
+++ b/src/app/facturas/facturas.component.html
@@ -1,4 +1,8 @@
-<p>facturas works!</p>
-<h2>Facturas por vencer</h2>
-<p>Epec</p>
-<p>Bielsa</p>
+<div>
+  <h2>Facturas por vencer</h2>
+
+  <body>
+    <p>Epec</p>
+    <p>Bielsa</p>
+  </body>
+</div>
