--- a/src/app/servicios/servicios.component.html
+++ b/src/app/servicios/servicios.component.html
@@ -20,7 +20,18 @@ padding: 24px 56px 24px 24px;
   color: #000000;
   text-shadow: none;
 }
+.wrapper {
+    display: grid;
+    grid-template-columns: 230px 100px;
+    grid-gap: 30px;
+    background-color: #fff;
+  }
+
 </style>
+<div class="wrapper">
+  <app-left-nav-bar></app-left-nav-bar>
+
+
 <body>
   <h2><b>Pago de Servicios</b></h2>
   <div>
@@ -412,3 +423,6 @@ padding: 24px 56px 24px 24px;
     </div>
   </section>
 </body>
+
+
+</div>
