--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,147 +1,55 @@
-<app-header></app-header>
-<div class="containerPrincipal">
-  <div class="container">
-    <!-- Title page -->
-    <section
-      class="imgencabezado"
-      style="background-image: url('assets/img/nosotros.jpg')"
-    >
-      <h2 class="text-center">SOBRE NOSOTROS</h2>
-    </section>
-
-    <!-- Content page -->
-    <section class="bg0 p-t-75 p-b-120">
-      <div class="container-nosotros">
-        <div class="row p-b-148">
-          <div class="text-center">
-            <img
-              src="assets/img/nosotros.jpg"
-              alt="IMG"
-              class="img-fluid"
-              width="1000px"
+<div class="background">
+  <app-header></app-header>
+  <section class="col" id="contact">
+    <div class="content">
+      <h1>Contactanos</h1>
+      <div class="contact-content">
+        <form method="post">
+          <div class="name">
+            <input
+              class="boxShadow"
+              type="text"
+              name="name"
+              id="name"
+              placeholder="Name *"
+              required=""
             />
           </div>
-
-          <div class="col-lg-12">
-            <div class="text-center">
-              <p class="text-justify">
-                Cencosud gestiona su cadena de valor a través de un modelo de
-                negocio basado en cuatro pilares: desarrollo del entorno,
-                gestión del cambio climático, desarrollo de colaboradores y
-                oferta sostenible, los que le han permitido integrar la
-                sostenibilidad en su modelo de negocio. A eso se suman cinco
-                focos estratégicos para 2020, los que son la base que le
-                permitirá contar con los recursos y estructuras para enfrentar
-                los desafíos y capturar las oportunidades. Cencosud cumple con
-                su misión de contribuir a mejorar la calidad de vida de sus
-                clientes, colaboradores y la comunidad donde está inserta.
-                Entiende que no solo crecerá como negocio, sino que apoyará a
-                las comunidades donde está para afrontar los principales
-                desafíos del cambio climático. Por ello, la Compañía está
-                convencida de que el valor que crea debe traducirse en beneficio
-                para todos sus grupos de interés.
-              </p>
-            </div>
+          <div class="subject">
+            <input
+              class="boxShadow"
+              type="text"
+              name="subject"
+              id="subject"
+              placeholder="Subject *"
+              required=""
+            />
           </div>
-        </div>
-      </div>
-    </section>
-
-    <div class="formContainer">
-      <div class="rowContainer">
-        <div class="row row-cols-lg-auto g-3 align-items-center">
-          <div class="well well-sm">
-            <form class="form-horizontal" method="post">
-              <fieldset>
-                <legend class="text-center header">Contactanos</legend>
-
-                <div class="form-group">
-                  <span class="col-md-1 col-md-offset-2 text-center"
-                    ><i class="fa fa-user bigicon"></i
-                  ></span>
-                  <div class="col-md-12">
-                    <input
-                      id="name"
-                      name="name"
-                      type="text"
-                      placeholder="Nombre"
-                      class="form-control"
-                    />
-                  </div>
-                </div>
-                <div class="form-group">
-                  <span class="col-md-1 col-md-offset-2 text-center"
-                    ><i class="fa fa-user bigicon"></i
-                  ></span>
-                  <div class="col-md-12">
-                    <input
-                      id="apellido"
-                      name="name"
-                      type="text"
-                      placeholder="Apellido"
-                      class="form-control"
-                    />
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <span class="col-md-1 col-md-offset-2 text-center"
-                    ><i class="fa fa-envelope-o bigicon"></i
-                  ></span>
-                  <div class="col-md-12">
-                    <input
-                      id="email"
-                      name="email"
-                      type="text"
-                      placeholder="Email"
-                      class="form-control"
-                    />
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <span class="col-md-1 col-md-offset-2 text-center"
-                    ><i class="fa fa-phone-square bigicon"></i
-                  ></span>
-                  <div class="col-md-12">
-                    <input
-                      id="celular"
-                      name="phone"
-                      type="text"
-                      placeholder="Celular"
-                      class="form-control"
-                    />
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <span class="col-md-1 col-md-offset-2 text-center"
-                    ><i class="fa fa-pencil-square-o bigicon"></i
-                  ></span>
-                  <div class="col-md-12">
-                    <textarea
-                      class="form-control"
-                      id="message"
-                      name="message"
-                      placeholder="Deje su mensaje"
-                      rows="7"
-                    ></textarea>
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <div class="col-md-12 text-center">
-                    <button type="submit" class="btn btn-primary btn-lg">
-                      Enviar
-                    </button>
-                  </div>
-                </div>
-              </fieldset>
-            </form>
+          <div class="email">
+            <input
+              class="boxShadow"
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Email *"
+              required=""
+            />
           </div>
-        </div>
+          <div class="message">
+            <textarea
+              class="boxShadow"
+              id="message"
+              name="message"
+              placeholder="Message *"
+              required=""
+            ></textarea>
+            <label id="counter"></label>
+          </div>
+          <input type="submit" value="Submit" class="submit" />
+        </form>
       </div>
     </div>
-  </div>
+  </section>
 </div>
+
 <app-footer></app-footer>
