Agregué la barra izquierda a algunos componentes, arreglos varios. Trabajando en el componente despositos

--- a/src/app/deposit/deposit.component.html
+++ b/src/app/deposit/deposit.component.html
@@ -1,6 +1,27 @@
 <div class="wrapper">
+  <div class="slidenav">
     <app-left-nav-bar></app-left-nav-bar>
-  
-<p>deposit works!</p>
+  </div>
 
+  <div>
+    <h1>Despositar</h1>
+    <p>Elegí la moneda que vas a ingresar</p>
+    <p>Pesos</p>
+    <p>Dolar</p>
+
+    <p>Ingresa dinero a tu cuenta</p>
+    <p>
+      Para ingresar pesos debes realizar una trasnerencia a la siguiente cuenta:
+    </p>
+    <p>Podés ingresar hasta 50.000 ARS ¿Cómo funcionan los limites?</p>
+    <div>
+      <p>Razon social: WALLET TRADE SRL</p>
+      <p>CUIT: 123456789</p>
+      <p>Banco: Banco nNdustrial SA Sucursal 1</p>
+      <p>Cuenta corriente 1-2346789/10</p>
+
+      <p>CBU: 123456789013245676890</p>
+      <p>ALIAS: WALLET.ARS</p>
+    </div>
+  </div>
 </div>
