--- a/src/app/left-nav-bar/left-nav-bar.component.html
+++ b/src/app/left-nav-bar/left-nav-bar.component.html
@@ -12,7 +12,7 @@
       >
     </li>
     <li>
-      <a routerLink="/operations/exchange" routerLinkActive="active"
+      <a routerLink="/retiros" routerLinkActive="active"
         >Extracciones</a
       >
     </li>
