--- a/src/app/operations/operations.component.html
+++ b/src/app/operations/operations.component.html
@@ -1,6 +1,6 @@
-<div class="container">
-    <app-transfer></app-transfer>
+<div class="wrapper">
+  <div class="slidenav">
+    <app-left-nav-bar></app-left-nav-bar>
+  </div>
+  <app-transfer></app-transfer>
 </div>
-
-
-
