--- a/src/app/retiros/retiros.component.html
+++ b/src/app/retiros/retiros.component.html
@@ -1,5 +1,7 @@
 <div class="wrapper">
+  <div class="slidenav">
   <app-left-nav-bar></app-left-nav-bar>
+</div>
   <div class="cuerpo">
     <div id="titulo">Retiros</div>
     <hr class="line" />
