--- a/src/app/deposit/deposit.component.css
+++ b/src/app/deposit/deposit.component.css
@@ -1,6 +1,11 @@
 .wrapper {
-    display: grid;
-    grid-template-columns: 230px 100px;
-    grid-gap: 30px;
-    background-color: #fff;
-  }
+  display: grid;
+  grid-template-columns: 230px 100px;
+  grid-gap: 30px;
+  background-color: #fff;
+}
+
+.slidenav {
+  background-color: #00b3a6;
+  padding: 10%;
+}
