--- a/src/app/left-nav-bar/left-nav-bar.component.css
+++ b/src/app/left-nav-bar/left-nav-bar.component.css
@@ -1,4 +1,4 @@
-a{
+a {
   text-decoration: none;
   color: white !important;
 }
@@ -7,11 +7,10 @@ nav {
   background-color: #00b3a6;
 }
 
-
 nav ul li {
   text-align: left;
   padding: 15px 10px;
-  list-style: none; /*quita los estilos por defecto de lista (ese punto feo) */
+  list-style: none; /* quita los estilos por defecto de lista */
 }
 
 hr {
