fix in component operations

--- a/src/app/operations/action/action.component.css
+++ b/src/app/operations/action/action.component.css
@@ -1,12 +1,9 @@
-thead > * {
+thead > tr > th {
     text-align: center;
+    font-weight: normal;
 }
 
 tbody > tr > td {
-    text-align: right;
-}
-
-tbody > tr > td:nth-child(1) {
     text-align: center;
 }
 
