Trabajando en el componente facturas

--- a/src/app/facturas/facturas.component.html
+++ b/src/app/facturas/facturas.component.html
@@ -1,8 +1,24 @@
 <div>
   <h2>Facturas por vencer</h2>
-
   <body>
-    <p>Epec</p>
-    <p>Bielsa</p>
+    <div class="card text-center">
+      <div class="card-body">
+        <h5 class="card-title">Municipalidad Córdoba</h5>
+
+        <a href="#" class="btn btn-primary">Pagar</a>
+      </div>
+      <div class="card-footer text-muted">Hace 1 día</div>
+    </div>
+    
+    <hr />
+
+    <div class="card text-center">
+      <div class="card-body">
+        <h5 class="card-title">Epec</h5>
+
+        <a href="#" class="btn btn-primary">Pagar</a>
+      </div>
+      <div class="card-footer text-muted">Hace dos días</div>
+    </div>
   </body>
 </div>
