--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,57 +1,23 @@
-.button {
-    box-shadow: inset 0 1px 0 0 #ffffff;
-    background: #ffffff linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
-    border-radius: 6px;
-    border: 1px solid #dcdcdc;
-    display: inline-block;
-    cursor: pointer;
-    color: #666666;
-    font-family: Arial, sans-serif;
-    font-size: 15px;
-    font-weight: bold;
-    padding: 6px 24px;
-    text-decoration: none;
-    text-shadow: 0 1px 0 #ffffff;
-    outline: 0;
-  }
-  .ml-1 {
-    margin-left: 35%;
-  }
-  
-  @media only screen and (max-width: 1040px) {
-    .name {
-      padding-left: 0;
-    }
-    .ml-1 {
-      margin-left: 0;
-    }
-  }
-  .name {
-    padding-left: 5%;
-  }
-  
-  nav {
-    height: 58px;
-  }
-  
-  nav a {
-    color: black;
-  }
-  
-  .activebutton {
-    box-shadow: inset 0 1px 0 0 #dcecfb;
-    background: #bddbfa linear-gradient(to bottom, #bddbfa 5%, #80b5ea 100%);
-    border-radius: 6px;
-    border: 1px solid #84bbf3;
-    display: inline-block;
-    cursor: pointer;
-    color: #ffffff;
-    font-family: Arial, sans-serif;
-    font-size: 15px;
-    font-weight: bold;
-    padding: 6px 24px;
-    text-decoration: none;
-    text-shadow: 0 1px 0 #528ecc;
-    outline: 0;
-  }
-  
+.sidenav {
+  width: 200px;
+}
+
+.sidenav .mat-toolbar {
+  background: inherit;
+}
+
+.mat-toolbar.mat-primary {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
+.hidden {
+  display: none;
+}
+
+.buttons, a{
+  padding-left: 37%;
+  color: white;
+  text-decoration: none;
+}
