Termiando depositos, arreglos varios

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -14,7 +14,7 @@
           <app-movements></app-movements>
         </div>
         <!-- Box C -->
-        <div class="box">
+        <div style="padding-top: 5%" class="box">
           <app-facturas></app-facturas>
         </div>
       </div>
