--- a/src/app/deposit/deposit.component.css
+++ b/src/app/deposit/deposit.component.css
@@ -1,16 +1,7 @@
-body {
-  font-family: roboto;
-  line-height: 30px;
-  width: 850px;
-  margin: 0 auto;
-  height: 400px;
-}
-
 .wrapper {
   display: grid;
-  grid-template-columns: 230px 100px;
+  grid-template-columns: 230px 1000px;
   grid-gap: 30px;
-  background-color: #fff;
 }
 
 .slidenav {
@@ -18,83 +9,28 @@ body {
   padding: 10%;
 }
 
-#titulo {
-  width: 900px;
-  margin: 0 auto;
-  height: 50px;
-  padding-left: 3%;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 36px;
-  line-height: 42px;
-  color: #343434;
-}
-
-#withdrawals {
-  width: 800px;
-  margin: 0 auto;
-  height: 50px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 23px;
-  line-height: 27px;
-  font-variant: small-caps;
-  color: #000000;
-  mix-blend-mode: darken;
-  margin-bottom: 4%;
-  margin-left: 28px;
-}
-.card2 {
-  background: #f2e7fe;
-  border-radius: 5px;
-  margin-bottom: 2%;
-  margin-right: 14%;
-}
-.card-body {
-  background: #faf5fe;
-}
-
 .cuerpo {
-  position: absolute;
-  margin-left: 23%;
-  margin-top: 5%;
-  padding-left: 2%;
-  padding-top: 1%;
+  margin: 5%;
+  padding: 5%;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
 }
 
-.nxt-button {
-  position: absolute;
-  bottom: 35px;
-  right: 60px;
-  list-style: none;
-  width: 210px;
-  height: 40px;
-  background: #6200ee;
-  border-radius: 100px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 26px;
-  color: #ffffff;
+body {
+  padding-top: 3%;
+}
+
+.card-body {
+  background-color: #ebfffe;
 }
 
 .btn {
-  font-family: Roboto;
-  font-style: normal;
   font-weight: 500;
-  font-size: 23px;
-  line-height: 30px;
-  color: #6200ee;
-}
-
-.line {
-  border: 1px solid #bdbdbd;
-  width: 865px;
-  margin-top: 1px;
+  font-size: 20px;
+  width: 50%;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  width: 25%;
+  margin-top: 3%;
   margin-bottom: 3%;
 }
